updated species controller (CRUD operations)
